Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-9814

[Python] Crash in test_parquet.py::test_read_partitioned_directory_s3fs

    XMLWordPrintableJSON

Details

    Description

      This seems to happen with some Minio versions, but is definitely a problem in Arrow.
      The crash message says:

      pyarrow/tests/test_parquet.py::test_read_partitioned_directory_s3fs[False] ../src/arrow/dataset/discovery.cc:188:  Check failed: relative.has_value() GetFileInfo() yielded path outside selector.base_dir
      

      The underlying problem is that we pass a full URI for the selector base_dir (such as "s3://bucket/path.") and the S3 filesystem implementation then returns regular paths (such as "bucket/path/foo/bar").

      I think we should do two things:
      1) error out rather than crash (and include the path strings in the error message), which would be more user-friendly
      2) fix the issue that full URIs are passed in base_dir

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m