ARROW-9814: [Python] Fix crash in test_parquet::test_read_partitioned_directory_s3fs